compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_on_error.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 5
expression: "\nfn a_result() { Error(1) }\n\npub fn main() {\n  case a_result() {\n    Error(_) -> 1\n    _ -> 2\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

fn a_result() { Error(1) }

pub fn main() {
  case a_result() {
    Error(_) -> 1
    _ -> 2
  }
}

----- COMPILED JAVASCRIPT
import { Error } from "../gleam.mjs";

function a_result() {
  return new Error(1);
}

export function main() {
  let $ = a_result();
  if ($ instanceof Error) {
    return 1;
  } else {
    return 2;
  }
}
