compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_with_multiple_subjects_building_list_matched_by_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 804
expression: "pub fn go(n, x) {\n   case n, x {\n     1, [] -> []\n     _, [a, b] -> [a, b]\n     3, [1, ..rest] -> [1, ..rest]\n     _, _ -> x\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(n, x) {
   case n, x {
     1, [] -> []
     _, [a, b] -> [a, b]
     3, [1, ..rest] -> [1, ..rest]
     _, _ -> x
   }
}

----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function go(n, x) {
  if (x instanceof $Empty) {
    if (n === 1) {
      return x;
    } else {
      return x;
    }
  } else {
    let $ = x.tail;
    if ($ instanceof $Empty) {
      if (n === 3) {
        let $1 = x.head;
        if ($1 === 1) {
          return x;
        } else {
          return x;
        }
      } else {
        return x;
      }
    } else {
      let $1 = $.tail;
      if ($1 instanceof $Empty) {
        return x;
      } else if (n === 3) {
        let $2 = x.head;
        if ($2 === 1) {
          return x;
        } else {
          return x;
        }
      } else {
        return x;
      }
    }
  }
}
