compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_with_multiple_subjects_building_record_matched_by_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 818
expression: "pub fn go(x, y) {\n   case x, y {\n     Ok(1), Error(_) -> Ok(1)\n     Error(_), Ok(n) -> Ok(n)\n     _, _ -> Error(Nil)\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(x, y) {
   case x, y {
     Ok(1), Error(_) -> Ok(1)
     Error(_), Ok(n) -> Ok(n)
     _, _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import { Ok, Error } from "../gleam.mjs";

export function go(x, y) {
  if (x instanceof Ok) {
    if (y instanceof Error) {
      let $ = x[0];
      if ($ === 1) {
        return x;
      } else {
        return new Error(undefined);
      }
    } else {
      return new Error(undefined);
    }
  } else if (y instanceof Ok) {
    return y;
  } else {
    return new Error(undefined);
  }
}
