compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_with_multiple_subjects_building_simple_value_matched_by_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 792
expression: "pub fn go(x) {\n   case x, x + 1 {\n     1, _ -> 2\n     _, n -> n\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(x) {
   case x, x + 1 {
     1, _ -> 2
     _, n -> n
   }
}

----- COMPILED JAVASCRIPT
export function go(x) {
  let $ = x + 1;
  if (x === 1) {
    return 2;
  } else {
    return $;
  }
}
