compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__following_todo.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 81
expression: "\npub fn go(x) {\n  case x {\n    True -> todo\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    True -> todo
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (x) {
    throw makeError(
      "todo",
      FILEPATH,
      "my/mod",
      4,
      "go",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  } else {
    return 1;
  }
}
