compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__guard_variable_only_brought_into_scope_when_needed_1.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 51
expression: "\npub fn main() {\n  case 1 {\n    i if i == 1 -> True\n    i if i < 2 -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case 1 {
    i if i == 1 -> True
    i if i < 2 -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
export function main() {
  let $ = 1;
  let i = $;
  if (i === 1) {
    return true;
  } else {
    let i = $;
    if (i < 2) {
      return true;
    } else {
      return false;
    }
  }
}
